# lwes-journaller-service

./: .gitignore  .travis.yml  ChangeLog  LICENSE  Makefile.am  configure.ac
etc/: lwes-journaller.config
etc/cron.d/: lwes-journaller-rotate
etc/init.d/: lwes-journaller
etc/logrotate.d/: lwes-journaller
etc/rc.d/init.d/: lwes-journaller
etc/supervisord.d/: lwes-journaller.ini
etc/sysconfig/: lwes-journaller
etc/systemd/system/: lwes-journaller.service
