etcdir=/etc
etc_DATA=etc/lwes-journaller.config

etcinitdir=/etc/init.d
etcinit_SCRIPTS=etc/init.d/lwes-journaller

etccrondir=/etc/cron.d
etccron_DATA=etc/cron.d/lwes-journaller-rotate

etclogrotatedir=/etc/logrotate.d
etclogrotate_DATA=etc/logrotate.d/lwes-journaller

MAINTAINERCLEANFILES = COPYING INSTALL missing install-sh aclocal.m4 Makefile.in configure *.gz

EXTRA_DIST = etc
